<resources>
    <string name="app_name">CryptoSimulator</string>
    <string name="button_navigate_buy">Buy Cryptocurrencies</string>
    <string name="title_activity_buy">BuyActivity</string>
    <string name="title_activity_transactions">TransactionsActivity</string>
    <string name="text_amount">Enter amount</string>
    <string name="button_check_price">Check price</string>
    <string name="button_buy">Buy this amount</string>
    <string name="text_portfolio_value">Portfolio value</string>
    <string name="text_balance">Current balance</string>
    <string name="text_diagram">Diagram View</string>
    <string name="text_column_code">Currency Code</string>
    <string name="text_column_value">Value</string>
    <string name="text_column_holdings">Holdings</string>
    <string name="text_column_amount">Amount</string>
    <string name="text_column_date">Date</string>
    <string name="json_string">https://min-api.cryptocompare.com/data/pricemulti?fsyms=BTC,ETH,XRP,BCH,LTC,ADA,NEO,XLM,EOS,XMR&amp;tsyms=EUR</string>
    <string name="text_actualized">Last actualized:&#160; </string>
    <string name="text_start_money">Choose your starting money (Euro/€) </string>
    <string name="text_negative_button">Cancel</string>
    <string name="text_positive_button">OK</string>
    <string name="text_wrong_input">Choose a value between 50 and 1.000.000.000</string>
    <string name="euro_symbol">€</string>
    <string name="text_price">Price:&#160; </string>
    <string name="text_no_input_type">Please choose the input type</string>
    <string name="insufficient_funds_message">You have insufficient funds to make this transaction</string>
    <string name="transaction_successful_message">You have bought the Cryptocurrency</string>
    <string name="transaction_sell_successful_message">You have sold the Cryptocurrency</string>
    <string name="insufficient_currency_message">You don´t own as much as you want to sell</string>
    <string name="not_actualized_message">The price has changed. Confirm again with the new price</string>
    <string name="text_sell">sell</string>
    <string name="text_buy">buy</string>
    <string name="text_quantity">Quantity </string>
    <string name="text_euro_value">Euro/€ value </string>
    <string name="text_input_specifier">Input type:&#160; </string>
    <string name="text_amount_specifier">Enter amount</string>
    <string name="text_credit_entry">Euro value:&#160;</string>
    <string name="text_confirm_transaction">Confirm transaction</string>
    <string name="action_item_home">Home</string>
    <string name="action_item_add_transaction">Add transaction</string>
    <string name="action_item_settings">Settings</string>
    <string name="action_item_history">History</string>
    <string name="text_owned_amount">Owned amount:&#160; </string>

    <string-array name="cryptocurrencies_array">
        <item>BTC</item>
        <item>ETH</item>
        <item>XRP</item>
        <item>BCH</item>
        <item>LTC</item>
        <item>ADA</item>
        <item>NEO</item>
        <item>XLM</item>
        <item>EOS</item>
        <item>XMR</item>
    </string-array>

</resources>