<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_home"
        android:icon="@drawable/ic_home_black"
        android:title="@string/action_item_home"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_transaction_history"
        android:icon="@drawable/ic_history_black_24dp"
        android:title="@string/action_item_history"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_add_transaction"
        android:icon="@drawable/ic_add_circle"
        android:title="@string/action_item_add_transaction"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_settings_applications_black"
        android:title="@string/action_item_settings"
        app:showAsAction="never"/>

</menu>